# nthu-parallel-programming

./: .gitignore  README.md
HW1-Odd-Even Sort/: advance.cpp  basic.cpp
HW2-Mandelbrot Set/: CMakeLists.txt  show.py
HW2-Mandelbrot Set/include/: comp.h  utils.h
HW2-Mandelbrot Set/src/: comp.cpp  main.cpp
